Data-prep/PINN/Basic_training/spartan/output_files/job_7646366/error_7646366.txt

Currently Loaded Modules:
  1) Anaconda3/2024.02-1

 

Traceback (most recent call last):
  File "/home/rrammohan/jobs/1D_HT_Pinn/Data-prep/PINN/Basic_training/spartan/1d-pinn-hpc.py", line 32, in <module>
    from loss_func import loss_fn_data,pde_loss,ic_loss,boundary_loss
  File "/home/rrammohan/jobs/1D_HT_Pinn/Data-prep/PINN/Basic_training/spartan/loss_func.py", line 194
    return bc = t_init
              ^
SyntaxError: invalid syntax
mv: cannot move 'output_files/job_7646366/output_7646366.txt' to 'outputs/output_7646366_2025-04-02_13-42.txt': No such file or directory
mv: cannot move 'output_files/job_7646366/error_7646366.txt' to 'outputs/error_7646366_2025-04-02_13-42.txt': No such file or directory
